<resources>
    <string name="app_name">BottomFlow</string>

    <!--Toolbar -->
    <string name="home">Home</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_detail">Movie Detail</string>

    <!-- Button list -->
    <string name="bottom_sheet">BottomSheet</string>
    <string name="top_rated_movie_list">Top Rated Movie List</string>
    <string name="popular_movie_list">Popular Movie List</string>
    <string name="now_playing_movie_list">Now Playing Movie List</string>

    <!-- Bottom sheet -->
    <string name="bottom_sheet_title">Terms</string>
    <string name="bottom_sheet_subtitle">These Terms and Conditions constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and [business entity name] (“we,” “us” or “our”), concerning your access to and use of the [website name.com] website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”).
        \n\nYou agree that by accessing the Site, you have read, understood, and agree to be bound by all of these Terms and Conditions. If you do not agree with all of these Terms and Conditions, then you are expressly prohibited from using the Site and you must discontinue use immediately.
        \n\nSupplemental terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms and Conditions at any time and for any reason.
    </string>
    <string name="bottom_sheet_accept">Accept</string>
    <string name="bottom_sheet_decline">Decline</string>
    <string name="refresh">Refresh</string>
    <string name="end_of_the_page">End of the page</string>

    <!-- Movie Details -->
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating: %s</string>
    <string name="language">Language: %s</string>
    <string name="release_date">Release date: %s</string>
    <string name="original_title">Original title</string>
    <string name="movie_image">Movie image</string>
</resources>